Fix crash when fetching attribute.

Use member variable to control initialisation, not static variable.

BUG:297039